--- a/Main/main.html
+++ b/Main/main.html
@@ -12,7 +12,7 @@
             <div class="left-section">
                 <div class="logo-container">
                     <a href="main.html" class="logo-button">
-                        <img src="/Images/3stars.png" alt="Логотип" class="logo-img">
+                        <img src="/Images/LogoStars.png" alt="Логотип" class="logo-img">
                         <span>ГЛАВНАЯ</span>
                     </a>
                 </div>
@@ -33,7 +33,8 @@
     </header>
 
     <div class="center-text">
-        <h1>Mirage</h1>
+        <img src="/Images/Star 3.png" id="logo-text">
+        <h1>MIRAGE</h1>
     </div>
 
     
